[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/animations/actors/PlayerGraphics.gd" type="Script" id=1]
[ext_resource path="res://source/actors/players/BasePlayer.gd" type="Script" id=2]
[ext_resource path="res://source/actors/players/DrawHelper.gd" type="Script" id=3]
[ext_resource path="res://source/actors/physicsHandlers/HookHandlerFlex.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

[node name="BasePlayer" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerGraphics" type="Sprite" parent="."]
self_modulate = Color( 0.262745, 1, 0.054902, 1 )
position = Vector2( 7.62939e-06, -0.794604 )
scale = Vector2( 0.255065, 0.536485 )
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="HookHandler" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Node" type="Node" parent="."]

[node name="DebugGraphical" type="Node2D" parent="Node"]
script = ExtResource( 3 )
